style all buttons with padding-top and style volunteersDisplay

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,12 @@
 .fab {
-  margin: 0px;
-  top: auto;
-  right: 20px;
-  bottom: 20px;
-  left: auto;
-  position: fixed !important;
-};
+	margin: 0px;
+	top: auto;
+	right: 20px;
+	bottom: 20px;
+	left: auto;
+	position: fixed !important;
+}
+
+button {
+	padding-top: 0.65rem !important;
+}
