add class and override overflow property on teamTable to remove x axis scroll when users are added to team card

--- a/src/pages/eventEditor.scss
+++ b/src/pages/eventEditor.scss
@@ -16,6 +16,10 @@
 	background-blend-mode: darken;
 }
 
+.teamTable {
+	overflow-x: hidden !important;
+}
+
 .volunteerCard {
 	position: sticky;
 	top: 1rem;
