add functionality to disable teams on an event if the user shouldn't be assignable to that team

--- a/src/pages/eventEditor.scss
+++ b/src/pages/eventEditor.scss
@@ -16,6 +16,11 @@
 	background-blend-mode: darken;
 }
 
+.disabled {
+	pointer-events: none;
+	opacity: 0.3;
+}
+
 .teamTable {
 	overflow-x: hidden !important;
 }
