implement loading state for when assigning volunteers and remove team cards when event accordion is collapsed

--- a/src/pages/eventEditor.scss
+++ b/src/pages/eventEditor.scss
@@ -21,6 +21,13 @@
 	opacity: 0.3;
 }
 
+.loadingContainer {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .teamTable {
 	overflow-x: hidden !important;
 }
